--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.0",
+    "dotenv": "^1.2.0",
     "ejs": "~0.8.5",
     "express": "~4.0.0",
     "eyes": "^0.1.8",
