--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eyes": "^0.1.8",
     "eyespect": "^0.1.10",
     "griddle-react": "^0.1.19",
+    "http": "0.0.0",
     "image-resolver": "^0.5.4",
     "jquery": "^2.1.4",
     "jquery-deferred": "^0.3.0",
@@ -21,7 +22,8 @@
     "react": "~0.12.0",
     "react-chosen": "^0.3.8",
     "request": "^2.64.0",
-    "slack-node": "^0.1.3"
+    "slack-node": "^0.1.3",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "browserify": "~3.20.0",
