--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "node-authentication",
+  "name": "jakt-slack-links",
   "main": "server.js",
+  "version": "0.0.1",
   "engines": {
     "node": "0.10.x"
   },
