--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "0.10.x"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bluebird": "^2.10.1",
     "body-parser": "~1.0.0",
