--- a/package.json
+++ b/package.json
@@ -31,7 +31,17 @@
     "react-chosen": "^0.3.8",
     "request": "^2.64.0",
     "slack-node": "^0.1.3",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "browserify": "~3.20.0",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "~0.5.0",
+    "gulp-concat": "~2.4.1",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.4",
+    "node-jsx": "~0.2.0",
+    "react-tools": "^0.12.0",
+    "reactify": "0.15.2"
   },
   "devDependencies": {
     "browserify": "~3.20.0",
