--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "server.js",
   "version": "0.0.1",
   "engines": {
-    "node": "0.10.x"
+    "node": "4.2.1"
   },
   "scripts": {
     "start": "node server.js"
