--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "server.js",
   "version": "0.0.1",
   "engines": {
-    "node": "4.2.1"
+    "node": "4.2.1",
+    "npm": "2.14.7"
   },
   "scripts": {
     "start": "node server.js"
@@ -11,7 +12,6 @@
   "dependencies": {
     "bluebird": "^2.10.1",
     "body-parser": "~1.0.0",
-    "browserify": "~3.20.0",
     "cookie-parser": "~1.0.0",
     "dotenv": "^1.2.0",
     "ejs": "~0.8.5",
@@ -20,26 +20,17 @@
     "eyespect": "^0.1.10",
     "font-awesome": "^4.4.0",
     "griddle-react": "^0.1.19",
-    "gulp": "^3.9.0",
-    "gulp-browserify": "~0.5.0",
-    "gulp-concat": "~2.4.1",
-    "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.0.4",
     "http": "0.0.0",
     "image-resolver": "^0.5.4",
     "jquery": "^2.1.4",
     "jquery-deferred": "^0.3.0",
     "lodash": "^3.10.1",
-    "node-jsx": "~0.2.0",
     "node-parse-api": "^0.3.8",
     "node-sass": "^3.4.2",
     "path": "*",
     "rc-select": "^4.9.1",
     "react": "~0.12.0",
     "react-chosen": "^0.3.8",
-    "react-tools": "^0.12.0",
-    "reactify": "0.15.2",
     "request": "^2.64.0",
     "slack-node": "^0.1.3",
     "socket.io": "^1.3.7"
