--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.0",
     "dotenv": "^1.2.0",
-    "ejs": "~0.8.5",
+    "ejs": "^2.3.4",
     "express": "~4.0.0",
     "eyes": "^0.1.8",
     "eyespect": "^0.1.10",
