switching dev deps

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "jquery": "^2.1.4",
     "jquery-deferred": "^0.3.0",
     "lodash": "^3.10.1",
+    "node-jsx": "^0.13.3",
     "node-parse-api": "^0.3.8",
     "node-sass": "^3.4.2",
     "path": "*",
     "rc-select": "^4.9.1",
     "react": "~0.12.0",
     "react-chosen": "^0.3.8",
+    "react-tools": "^0.13.3",
+    "reactify": "^1.1.1",
     "request": "^2.64.0",
     "slack-node": "^0.1.3",
     "socket.io": "^1.3.7"
