--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "bluebird": "^2.10.1",
-    "body-parser": "~1.0.0",
+    "body-parser": "^1.14.1",
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.0.0",
+    "cookie-session": "*",
     "dotenv": "^1.2.0",
     "ejs": "^2.3.4",
-    "express": "~4.0.0",
+    "express": "*",
+    "express-session": "*",
     "eyes": "^0.1.8",
     "eyespect": "^0.1.10",
     "font-awesome": "^4.4.0",
@@ -25,15 +30,18 @@
     "jquery": "^2.1.4",
     "jquery-deferred": "^0.3.0",
     "lodash": "^3.10.1",
+    "method-override": "~1.0.0",
+    "mongoose": "^4.2.6",
+    "morgan": "~1.0.0",
     "node-jsx": "^0.13.3",
     "node-parse-api": "^0.3.8",
     "node-sass": "^3.4.2",
+    "parse": "^1.6.9",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "passport-slack": "0.0.4",
     "path": "*",
-    "rc-select": "^4.9.1",
     "react": "~0.12.0",
-    "react-chosen": "^0.3.8",
-    "react-tools": "^0.13.3",
-    "reactify": "^1.1.1",
     "request": "^2.64.0",
     "slack-node": "^0.1.3",
     "socket.io": "^1.3.7"
