change some variables

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,7 @@
 PARSE_APP_ID=xxxxxxx
 PARSE_MASTER_KEY=xxxxxxx
 SLACK_API_TOKEN=xxxxxx
+MONGO_URI=xxxxxxxx
+MODULUS_IO_URI=xxxxxxxx
+SLACK_OAUTH_CLIENT_ID=xxxxxxx
+SLACK_OAUTH_CLIENT_SECRET=xxxxxxxxxx
