--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "bcrypt-nodejs": "latest",
     "bluebird": "^2.10.1",
     "body-parser": "^1.14.1",
