--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "passport-local": "~0.1.6",
     "passport-slack": "0.0.4",
     "path": "*",
-    "react": "~0.12.0",
+    "react": "^0.14.3",
+    "react-addons": "^0.9.0",
+    "react-dom": "^0.14.3",
     "request": "^2.64.0",
     "slack-node": "^0.1.3",
     "socket.io": "^1.3.7"
