--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "parse": "^1.6.9",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "passport-slack": "0.0.4",
+    "passport-slack": "git+https://github.com/mjpearson/passport-slack.git#4b4c744dfed91beb815756db7358b4b7f7d68555",
     "path": "*",
     "react": "^0.14.3",
     "react-addons": "^0.9.0",
